package GestionEmpleados;

public interface Bonificable {
    void calcularBonificacion();
}
